functionality working for rps game NT

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="index.js" defer></script>
     <title>Rock, Paper, Scissors</title>
-</head>
-<body>
-    <div class="container">
+  </head>
+  <body>
+    <header>
+      <h1>ROCK, PAPER, SCISSORS!</h1>
+    </header>
+    <main>
+      <div class="container">
         <button class="btn rock-btn">Rock</button>
         <button class="btn paper-btn">Paper</button>
         <button class="btn scissors-btn">Scissors</button>
-    </div>
-</body>
+      </div>
+      <div class="results">
+        <div class="player-results">
+          <h3>Player</h3>
+          <div>
+            <span>Wins:</span>
+            <span>0</span>
+          </div>
+        </div>
+        <div class="computer-results">
+          <h3>Computer</h3>
+          <div>
+            <span>Wins:</span>
+            <span>0</span>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
