--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
@@ -12,23 +13,26 @@
     </header>
     <main>
       <div class="container">
-        <button class="btn rock-btn">Rock</button>
-        <button class="btn paper-btn">Paper</button>
-        <button class="btn scissors-btn">Scissors</button>
+        <button class="btn rock-btn" data-choice="rock">Rock</button>
+        <button class="btn paper-btn" data-choice="paper">Paper</button>
+        <button class="btn scissors-btn" data-choice="scissors">Scissors</button>
+      </div>
+      <div class="results-history">
+        <p id="outcome"></p>
       </div>
       <div class="results">
         <div class="player-results">
           <h3>Player</h3>
           <div>
             <span>Wins:</span>
-            <span>0</span>
+            <span id="playerWinCount">0</span>
           </div>
         </div>
         <div class="computer-results">
           <h3>Computer</h3>
           <div>
             <span>Wins:</span>
-            <span>0</span>
+            <span id="computerWinCount">0</span>
           </div>
         </div>
       </div>
