ui and functionality mostly complete

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
-    <header>
+    <header class="flex-center">
       <h1>ROCK, PAPER, SCISSORS!</h1>
     </header>
     <main>
-      <div class="container">
+      <div class="container flex-center">
         <button class="btn rock-btn" data-choice="rock">Rock</button>
         <button class="btn paper-btn" data-choice="paper">Paper</button>
         <button class="btn scissors-btn" data-choice="scissors">Scissors</button>
       </div>
       <div class="results-history">
-        <p id="outcome"></p>
       </div>
       <div class="results">
         <div class="player-results">
