added footer and copyright

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <div class="results-history">
         </div>
     </main>
+    <footer class="footer">
+      <p class="footer-text">Copyright &#169; Nicholas Triggs 2023</p>
+  </footer>
     <script src="index.js" defer></script>
   </body>
 </html>
